[tool.poetry]
name = "skyrouter-exporter"
version = "0.1.0"
description = "Prometheus Metric Exporter for Sky Routers"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
skyrouter = "^0.1.0"
prometheus-client = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
